Start layout (incomplete)

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 <body>
 	<div class="Group">
 		<h1>Simple Circuits</h1>
-		<input type="checkbox" id="simple-xor-a" />
-		<input type="checkbox" id="simple-xor-b" />
-		<div id="simple-xor-result" class="Result"></div>
+		<div class="Canvas" style="width: 24rem; height: 14rem;">
+			<input type="checkbox" id="simple-xor-a" />
+			<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 4rem;"  />
+			<input type="checkbox" id="simple-xor-b" style="left: 3rem;" />
+			<div id="simple-xor-result" class="Result"></div>
 
+		</div>
 		<input type="checkbox" id="simple-and-a" />
 		<input type="checkbox" id="simple-and-b" />
 		<div id="simple-and-result" class="Result"></div>
