--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 	<div class="Group">
 		<h1>Simple Circuits</h1>
 		<div class="Canvas" style="width: 24rem; height: 14rem;">
-			<input type="checkbox" id="simple-xor-a" />
-			<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 4rem;"  />
-			<input type="checkbox" id="simple-xor-b" style="left: 3rem;" />
-			<div id="simple-xor-result" class="Result"></div>
 
+			<input type="checkbox" id="simple-xor-a" style="top: 0; left: 0;" />
+			<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 4rem;"></div>
+			<div class="Connector Horizontal Corner Left Up" style="top: 7rem; left: 1.5rem; width: 2rem;"></div>
+
+			<input type="checkbox" id="simple-xor-b" style="top: 0; left: 6rem;" />
+			<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 4rem;"></div>
+			<div class="Connector Horizontal Corner Right Up" style="top: 7rem; left: 5.5rem; width: 2rem;"></div>
+
+			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 6rem;"></div>
 		</div>
 		<input type="checkbox" id="simple-and-a" />
 		<input type="checkbox" id="simple-and-b" />
