Add initial OR shape
Does not yet align connector edges

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="Group">
 		<h1>Simple Circuits</h1>
-		<div class="Canvas" style="width: 24rem; height: 14rem;">
+		<div class="Canvas" style="width: 24rem; height: 20rem;">
 
 			<input type="checkbox" id="simple-xor-a" style="top: 0; left: 0;" />
 			<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 4rem;"></div>
@@ -19,7 +19,12 @@
 			<div class="Connector Horizontal Corner Right Up" style="top: 7rem; left: 5.5rem; width: 2rem;"></div>
 			<div class="Connector Vertical Corner Right" style="top: 7rem; left: 5.5rem; height: 2rem;"></div>
 
-			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 10rem;"></div>
+			<div id="simple-xor-gate" class="Gate-XOR" style="left: 2.5rem; top: 9rem;">
+				<span></span>
+				<span></span>
+
+			</div>
+			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 17rem;"></div>
 		</div>
 		<input type="checkbox" id="simple-and-a" />
 		<input type="checkbox" id="simple-and-b" />
