--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 			<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 4rem;"></div>
 			<div class="Connector Horizontal Corner Left Up" style="top: 7rem; left: 1.5rem; width: 2rem;"></div>
 			<div class="Connector Vertical Corner Left" style="top: 7rem; left: 3.5rem; height: 2rem;"></div>
+			<div class="Connector Vertical Convex Left" style="top: 9rem; left: 3.5rem;"></div>
 
 			<input type="checkbox" id="simple-xor-b" style="top: 0; left: 6rem;" />
 			<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 4rem;"></div>
 			<div class="Connector Horizontal Corner Right Up" style="top: 7rem; left: 5.5rem; width: 2rem;"></div>
 			<div class="Connector Vertical Corner Right" style="top: 7rem; left: 5.5rem; height: 2rem;"></div>
+			<div class="Connector Vertical Convex Right" style="top: 9rem; left: 5.5rem;"></div>
 
 			<div id="simple-xor-gate" class="Gate-XOR" style="left: 2.5rem; top: 9rem;">
 				<span></span>
