--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 			<div class="Connector Vertical Corner Right" style="top: 7rem; left: 5.5rem; height: 2rem;"></div>
 			<div class="Connector Vertical Convex Right" style="top: 9rem; left: 5.5rem;"></div>
 
-			<div id="simple-xor-gate" class="Gate-XOR" style="left: 2.5rem; top: 9rem;">
+			<div id="simple-xor-gate" class="Gate XOR" style="left: 2.5rem; top: 9rem;">
 				<span></span>
 				<span></span>
-
+				<div></div>
 			</div>
 			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 17rem;"></div>
 		</div>
