--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				<span></span>
 				<div></div>
 			</div>
-			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 17rem;"></div>
+			<div class="Connector Vertical" style="top: 14rem; left: 4.5rem; height: 2rem;"></div>
+			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 16rem;"></div>
 		</div>
 		<input type="checkbox" id="simple-and-a" />
 		<input type="checkbox" id="simple-and-b" />
