Colorize results through gates only

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div></div>
 			</div>
 			<div class="Connector Vertical" style="top: 14rem; left: 4.5rem; height: 2rem;"></div>
-			<div id="simple-xor-result" class="Result" style="left: 3rem; top: 16rem;"></div>
+			<div class="Result" style="left: 3rem; top: 16rem;"></div>
 		</div>
 		<input type="checkbox" id="simple-and-a" />
 		<input type="checkbox" id="simple-and-b" />
