--- a/index.html
+++ b/index.html
@@ -10,27 +10,78 @@
 	<nav>
 		<a href="#gates" id="gates">Logic Gates</a>
 		<section>
-			<div class="Canvas" style="width: 9rem; height: 17rem;">
-				<input type="checkbox" id="simple-xor-a" style="top: 0; left: 0;" />
-				<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
-				<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 1.5rem; width: 2rem;"></div>
-				<div class="Connector Vertical Corner Left" style="top: 5rem; left: 3.5rem; height: 2rem;"></div>
-				<div class="Connector Vertical Convex Left" style="top: 7rem; left: 3.5rem;"></div>
+			<ul class="CanvasList">
+				<li>
+					<h2>And</h2>
+					<div class="Canvas" style="width: 9rem; height: 17rem;">
+						<input type="checkbox" id="simple-and-a" style="top: 0; left: 0;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 1.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 3.5rem; height: 2rem;"></div>
 
-				<input type="checkbox" id="simple-xor-b" style="top: 0; left: 6rem;" />
-				<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
-				<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 5.5rem; width: 2rem;"></div>
-				<div class="Connector Vertical Corner Right" style="top: 5rem; left: 5.5rem; height: 2rem;"></div>
-				<div class="Connector Vertical Convex Right" style="top: 7rem; left: 5.5rem;"></div>
+						<input type="checkbox" id="simple-and-b" style="top: 0; left: 6rem;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 5.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 5.5rem; height: 2rem;"></div>
 
-				<div id="simple-xor-gate" class="Gate XOR" style="left: 2.5rem; top: 7rem;">
-					<span></span>
-					<span></span>
-					<div></div>
-				</div>
-				<div class="Connector Vertical" style="top: 12rem; left: 4.5rem; height: 2rem;"></div>
-				<div class="Result" style="left: 3rem; top: 14rem;"></div>
-			</div>
+						<div id="simple-and-gate" class="Gate AND" style="left: 2.5rem; top: 7rem;">
+							<span></span>
+							<span></span>
+							<div></div>
+						</div>
+						<div class="Connector Vertical" style="top: 12rem; left: 4.5rem; height: 2rem;"></div>
+						<div class="Result" style="left: 3rem; top: 14rem;"></div>
+					</div>
+				</li>
+				<li>
+					<h2>Or</h2>
+					<div class="Canvas" style="width: 9rem; height: 17rem;">
+						<input type="checkbox" id="simple-or-a" style="top: 0; left: 0;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 1.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 3.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 7rem; left: 3.5rem;"></div>
+
+						<input type="checkbox" id="simple-or-b" style="top: 0; left: 6rem;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 5.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 5.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 7rem; left: 5.5rem;"></div>
+
+						<div id="simple-or-gate" class="Gate OR" style="left: 2.5rem; top: 7rem;">
+							<span></span>
+							<span></span>
+							<div></div>
+						</div>
+						<div class="Connector Vertical" style="top: 11rem; left: 4.5rem; height: 2rem;"></div>
+						<div class="Result" style="left: 3rem; top: 13rem;"></div>
+					</div>
+				</li>
+				<li>
+					<h2>XOr</h2>
+					<div class="Canvas" style="width: 9rem; height: 17rem;">
+						<input type="checkbox" id="simple-xor-a" style="top: 0; left: 0;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 1.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 3.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 7rem; left: 3.5rem;"></div>
+
+						<input type="checkbox" id="simple-xor-b" style="top: 0; left: 6rem;" />
+						<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 5.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 5.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 7rem; left: 5.5rem;"></div>
+
+						<div id="simple-xor-gate" class="Gate XOR" style="left: 2.5rem; top: 7rem;">
+							<span></span>
+							<span></span>
+							<div></div>
+						</div>
+						<div class="Connector Vertical" style="top: 12rem; left: 4.5rem; height: 2rem;"></div>
+						<div class="Result" style="left: 3rem; top: 14rem;"></div>
+					</div>
+				</li>
+			</ul>
 		</section>
 		<a href="#half-adder" id="half-adder">Half Adder</a>
 		<section>Coming soon...</section>
