Add basic styling for gate list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<section>
 			<ul class="CanvasList">
 				<li>
-					<h2>And</h2>
+					<h2>And Gate</h2>
 					<div class="Canvas" style="width: 9rem; height: 17rem;">
 						<input type="checkbox" id="simple-and-a" style="top: 0; left: 0;" />
 						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
@@ -34,7 +34,7 @@
 					</div>
 				</li>
 				<li>
-					<h2>Or</h2>
+					<h2>Or Gate</h2>
 					<div class="Canvas" style="width: 9rem; height: 17rem;">
 						<input type="checkbox" id="simple-or-a" style="top: 0; left: 0;" />
 						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
@@ -58,7 +58,7 @@
 					</div>
 				</li>
 				<li>
-					<h2>XOr</h2>
+					<h2>XOR Gate</h2>
 					<div class="Canvas" style="width: 9rem; height: 17rem;">
 						<input type="checkbox" id="simple-xor-a" style="top: 0; left: 0;" />
 						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
