Center the OR gate in its box

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 				<li>
 					<h2>Or Gate</h2>
 					<div class="Canvas" style="width: 9rem; height: 17rem;">
-						<input type="checkbox" id="simple-or-a" style="top: 0; left: 0;" />
-						<div class="Connector Vertical" style="top: 3rem; left: 1.5rem; height: 2rem;"></div>
-						<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 1.5rem; width: 2rem;"></div>
-						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 3.5rem; height: 2rem;"></div>
-						<div class="Connector Vertical Convex Left" style="top: 7rem; left: 3.5rem;"></div>
+						<input type="checkbox" id="simple-or-a" style="top: 0.5rem; left: 0;" />
+						<div class="Connector Vertical" style="top: 3.5rem; left: 1.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 5.5rem; left: 1.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5.5rem; left: 3.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 7.5rem; left: 3.5rem;"></div>
 
-						<input type="checkbox" id="simple-or-b" style="top: 0; left: 6rem;" />
-						<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
-						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 5.5rem; width: 2rem;"></div>
-						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 5.5rem; height: 2rem;"></div>
-						<div class="Connector Vertical Convex Right" style="top: 7rem; left: 5.5rem;"></div>
+						<input type="checkbox" id="simple-or-b" style="top: 0.5rem; left: 6rem;" />
+						<div class="Connector Vertical" style="top: 3.5rem; left: 7.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5.5rem; left: 5.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5.5rem; left: 5.5rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 7.5rem; left: 5.5rem;"></div>
 
-						<div id="simple-or-gate" class="Gate OR" style="left: 2.5rem; top: 7rem;">
+						<div id="simple-or-gate" class="Gate OR" style="left: 2.5rem; top: 7.5rem;">
 							<span></span>
 							<span></span>
 							<div></div>
 						</div>
-						<div class="Connector Vertical" style="top: 11rem; left: 4.5rem; height: 2rem;"></div>
-						<div class="Result" style="left: 3rem; top: 13rem;"></div>
+						<div class="Connector Vertical" style="top: 11.5rem; left: 4.5rem; height: 2rem;"></div>
+						<div class="Result" style="left: 3rem; top: 13.5rem;"></div>
 					</div>
 				</li>
 				<li>
