--- a/index.html
+++ b/index.html
@@ -84,7 +84,40 @@
 			</ul>
 		</section>
 		<a href="#half-adder" id="half-adder">Half Adder</a>
-		<section>Coming soon...</section>
+		<section>
+			<div class="Canvas" style="width: 12.5rem; height: 21rem;">
+				<input type="checkbox" id="half-adder-a" style="top: 0; left: 3.5rem;" />
+				<div class="Connector Vertical" style="top: 3rem; left: 5rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 5rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Left" style="top: 5rem; left: 7rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Left" style="top: 11rem; left: 7rem;"></div>
+
+				<div class="Connector Horizontal Corner" style="top: 7rem; left: 1rem; width: 6rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 7rem; left: 1rem; height: 4rem;"></div>
+
+
+				<input type="checkbox" id="half-adder-b" style="top: 0; left: 9.5rem;" />
+				<div class="Connector Vertical" style="top: 3rem; left: 11rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 9rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 5rem; left: 9rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Right" style="top: 11rem; left: 9rem;"></div>
+
+				<div class="Connector Horizontal Corner" style="top: 9rem; left: 3rem; width: 6rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 9rem; left: 3rem; height: 2rem;"></div>
+
+				<div id="half-adder-xor-gate" class="Gate XOR" style="left: 6rem; top: 11rem;">
+					<span></span>
+					<span></span>
+					<div></div>
+				</div>
+				<div class="Connector Vertical" style="top: 16rem; left: 8rem; height: 2rem;"></div>
+				<div class="Result" style="left: 6.5rem; top: 18rem;"></div>
+
+				<div id="half-adder-and-gate" class="Gate AND" style="left: 0; top: 11rem;"></div>
+				<div class="Connector Vertical" style="top: 16rem; left: 2rem; height: 2rem;"></div>
+				<div class="Result" style="left: 0.5rem; top: 18rem;"></div>
+			</div>
+		</section>
 		<a href="#full-adder" id="full-adder">Full Adder</a>
 		<section>Coming soon...</section>
 		<a href="#chained-adder" id="chained-adder">Chained Adder</a>
