--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="Connector Vertical Corner Left" style="top: 5rem; left: 7rem; height: 6rem;"></div>
 				<div class="Connector Vertical Convex Left" style="top: 11rem; left: 7rem;"></div>
 
-				<div class="Connector Horizontal Corner" style="top: 7rem; left: 1rem; width: 6rem;"></div>
+				<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 1rem; width: 6rem;"></div>
 				<div class="Connector Vertical Corner Right" style="top: 7rem; left: 1rem; height: 4rem;"></div>
 
 
@@ -102,7 +102,7 @@
 				<div class="Connector Vertical Corner Right" style="top: 5rem; left: 9rem; height: 6rem;"></div>
 				<div class="Connector Vertical Convex Right" style="top: 11rem; left: 9rem;"></div>
 
-				<div class="Connector Horizontal Corner" style="top: 9rem; left: 3rem; width: 6rem;"></div>
+				<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 3rem; width: 6rem;"></div>
 				<div class="Connector Vertical Corner Right" style="top: 9rem; left: 3rem; height: 2rem;"></div>
 
 				<div id="half-adder-xor-gate" class="Gate XOR" style="left: 6rem; top: 11rem;">
