Draw full adder
Does not include CSS for actual logic.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,82 @@
 			</div>
 		</section>
 		<a href="#full-adder" id="full-adder">Full Adder</a>
-		<section>Coming soon...</section>
+		<section>
+			<div class="Canvas" style="width: 21rem; height: 42rem;">
+				<input type="checkbox" id="full-adder-carry" style="top: 0; left: 6rem;" />
+				<div class="Connector Vertical" style="top: 3rem; left: 7.5rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 7.5rem; width: 4rem;"></div>
+				<div class="Connector Vertical Corner Left" style="top: 5rem; left: 11.5rem; height: 13rem;"></div>
+
+				<div class="Connector Horizontal Corner Left Up" style="top: 18rem; left: 11.5rem; width: 1.5rem;"></div>
+				<div class="Connector Vertical Corner Left" style="top: 18rem; left: 13rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Left" style="top: 24rem; left: 13rem;"></div>
+
+				<div class="Connector Horizontal Junction Right" style="top: 20rem; left: 7rem; width: 6rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 20rem; left: 7rem; height: 4rem;"></div>
+
+
+				<input type="checkbox" id="full-adder-a" style="top: 0; left: 12rem;" />
+				<div class="Connector Vertical" style="top: 3rem; left: 13.5rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Left Up" style="top: 5rem; left: 13.5rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Left" style="top: 5rem; left: 15.5rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Left" style="top: 11rem; left: 15.5rem;"></div>
+
+				<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 1rem; width: 14.5rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 7rem; left: 1rem; height: 17rem;"></div>
+
+
+				<input type="checkbox" id="full-adder-b" style="top: 0; left: 18rem;" />
+				<div class="Connector Vertical" style="top: 3rem; left: 19.5rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 17.5rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 5rem; left: 17.5rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Right" style="top: 11rem; left: 17.5rem;"></div>
+
+				<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 3rem; width: 14.5rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 9rem; left: 3rem; height: 15rem;"></div>
+
+
+				<div id="full-adder-xor-gate-input" class="Gate XOR" style="left: 14.5rem; top: 11rem;">
+					<span></span>
+					<span></span>
+					<div></div>
+				</div>
+				<div class="Connector Vertical" style="top: 16rem; left: 16.5rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Right Up" style="top: 18rem; left: 15rem; width: 1.5rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 18rem; left: 15rem; height: 6rem;"></div>
+				<div class="Connector Vertical Convex Right" style="top: 24rem; left: 15rem;"></div>
+
+				<div class="Connector Horizontal Junction Right" style="top: 22rem; left: 9rem; width: 6rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 22rem; left: 9rem; height: 2rem;"></div>
+
+				<div id="full-adder-xor-gate-carry" class="Gate XOR" style="left: 12rem; top: 24rem;">
+					<span></span>
+					<span></span>
+					<div></div>
+				</div>
+				<div class="Connector Vertical" style="top: 29rem; left: 14rem; height: 10rem;"></div>
+				<div class="Result" style="left: 12.5rem; top: 39rem;"></div>
+
+				<div id="full-adder-and-gate-input" class="Gate AND" style="left: 0; top: 24rem;"></div>
+				<div class="Connector Vertical" style="top: 29rem; left: 2rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Left Up" style="top: 31rem; left: 2rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Left" style="top: 31rem; left: 4rem; height: 2rem;"></div>
+				<div class="Connector Vertical Convex Left" style="top: 33rem; left: 4rem;"></div>
+
+				<div id="full-adder-and-gate-sum" class="Gate AND" style="left: 6rem; top: 24rem;"></div>
+				<div class="Connector Vertical" style="top: 29rem; left: 8rem; height: 2rem;"></div>
+				<div class="Connector Horizontal Corner Right Up" style="top: 31rem; left: 6rem; width: 2rem;"></div>
+				<div class="Connector Vertical Corner Right" style="top: 31rem; left: 6rem; height: 2rem;"></div>
+				<div class="Connector Vertical Convex Right" style="top: 33rem; left: 6rem;"></div>
+
+				<div id="full-adder-or-gate-carry-out" class="Gate OR" style="left: 3rem; top: 33rem;">
+					<span></span>
+					<span></span>
+				</div>
+				<div class="Connector Vertical" style="top: 37rem; left: 5rem; height: 2rem;"></div>
+				<div class="Result" style="left: 3.5rem; top: 39rem;"></div>
+			</div>
+		</section>
 		<a href="#chained-adder" id="chained-adder">Chained Adder</a>
 		<section>Coming soon...</section>
 		<a href="#decimal-adder" id="decimal-adder">Decimal Adder</a>
