--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Silon &ndash; Adders &amp; Logic Gates in Pure CSS</title>
-	<link href="//fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css" />
+	<link href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic" rel="stylesheet" type="text/css" />
 	<link href="styles/logic.css" rel="stylesheet" />
 	<link href="styles/layout.css" rel="stylesheet" />
 </head>
@@ -237,6 +237,17 @@
 		<section>Coming soon...</section>
 		<a href="#decimal-adder" id="decimal-adder">Decimal Adder</a>
 		<section>Coming soon...</section>
+		<section class="DefaultTab">
+			<h1>Silon</h1>
+			<h2>Implementing logic gates and adders in pure CSS</h2>
+			<p>
+				Silon is an experiment demonstrating the power of CSS selectors.  Using
+				<a href="http://lesscss.org">LESS</a> to generate selectors from declared
+				logical operations, I implemented simple <a href="http://en.wikipedia.org/wiki/Logic_gate">logic gates</a>,
+				as well as <a href="http://en.wikipedia.org/wiki/Adder_%28electronics%29">half- and full- adders</a>.
+			</p>
+			<p>To get started, click a tab above.</p>
+		</section>
 	</nav>
 </body>
 </html>
