Remove unnecessary horizontal scrolling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<nav>
 		<a href="#gates" id="gates">Logic Gates</a>
 		<section>
-			<div>
+			<div class="ShrinkWrap">
 				<ul class="CanvasList">
 					<li>
 						<h2>And Gate</h2>
@@ -245,7 +245,7 @@
 		<a href="#decimal-adder" id="decimal-adder">Decimal Adder</a>
 		<section><div>Coming soon...</div></section>
 		<section class="DefaultTab">
-			<div>
+			<div class="ShrinkWrap">
 				<h1>Silon</h1>
 				<h2>Implementing logic gates and adders in pure CSS</h2>
 				<p>
