Add explanatory texts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<a href="#gates" id="gates">Logic Gates</a>
 		<section>
 			<div class="ShrinkWrap">
+				<p>
+					Here are the three basic logic gates.  Click the inputs (square boxes) to see the outputs reflect new values.
+				</p>
 				<ul class="CanvasList">
 					<li>
 						<h2>And Gate</h2>
@@ -106,7 +109,10 @@
 		</section>
 		<a href="#half-adder" id="half-adder">Half Adder</a>
 		<section>
-			<div>
+			<div class="ShrinkWrap">
+				<p>
+					A <a href="http://en.wikipedia.org/wiki/Adder_%28electronics%29#Half_adder">half adder</a> adds two binary digits, returning the result (either 0, 1, or 10) in its two outputs.  The two outputs are called the carry (the tens digit) and the sum (the ones digit); the carry can be chained into a full adder to add more inputs.
+				</p>
 				<div class="Canvas" style="width: 12.5rem; height: 21rem;">
 					<input type="checkbox" id="half-adder-a" style="top: 0; left: 3.5rem;" />
 					<div class="Group">
@@ -150,7 +156,10 @@
 		</section>
 		<a href="#full-adder" id="full-adder">Full Adder</a>
 		<section>
-			<div>
+			<div class="ShrinkWrap">
+				<p>
+					A <a href="http://en.wikipedia.org/wiki/Adder_%28electronics%29#Full_adder">full adder</a> adds three binary digits, returning the result (0, 1, 10, or 11) in its two outputs.  The two outputs are called the carry-out (the tens digit) and the sum (the ones digit); the carry can be chained to another full adder to add more inputs.  The first input (which a carry-out can be chained to) is called the carry-in; the other two are usually called A and B (this designation is arbitrary; the inputs are completely symmetric).
+				</p>
 				<div class="Canvas" style="width: 21rem; height: 42rem;">
 					<input type="checkbox" id="full-adder-carry" style="top: 0; left: 6rem;" />
 					<div class="Group">
