Draw 4 chained adders
Does not have underlying logic yet

--- a/index.html
+++ b/index.html
@@ -250,7 +250,292 @@
 			</div>
 		</section>
 		<a href="#chained-adder" id="chained-adder">Chained Adder</a>
-		<section><div>Coming soon...</div></section>
+		<section>
+			<div>
+				<p>
+					Here are multiple full adders chained together, adding a number of binary digits into a single sum.
+				</p>
+				<div class="Canvas" style="width: 75.5rem; height: 42rem;">
+					<input type="checkbox" id="chained-adder-1-a" style="top: 0; left: 66.5rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 68rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Left" style="top: 5rem; left: 68rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 70rem; height: 19rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 24rem; left: 70rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 64rem; width: 6rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 7rem; left: 64rem; height: 17rem;"></div>
+					</div>
+
+					<input type="checkbox" id="chained-adder-1-b" style="top: 0; left: 72.5rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 74rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 72rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 72rem; height: 19rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 24rem; left: 72rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 66rem; width: 6rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 9rem; left: 66rem; height: 15em;"></div>
+					</div>
+
+					<div id="chained-adder-1-xor-gate-sum" class="Gate XOR" style="left: 69rem; top: 24rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 71rem; height: 10rem;"></div>
+						<div class="Result" style="left: 69.5rem; top: 39rem;"></div>
+					</div>
+					<div id="chained-adder-1-gate-carry-out" class="Gate AND" style="left: 63rem; top: 24rem;">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 65rem; height: 10rem;"></div>
+						<div class="Connector Horizontal Corner Up Right" style="top: 39rem; left: 58rem; width: 7rem;"></div>
+						<div class="Connector Vertical Corner Right Bottom" style="top: 20rem; left: 58rem; height: 19rem;"></div>
+						<div class="Connector Horizontal Corner Down Right" style="top: 20rem; left: 47rem; width: 11rem; z-index: 2"></div>
+						<div class="Connector Vertical Corner Right" style="top: 20rem; left: 47rem; height: 4rem; z-index: 2"></div>
+
+						<div class="Connector Vertical Junction Top" style="top: 20rem; left: 53rem; height: 4rem; z-index: 2"></div>
+						<div class="Connector Vertical Convex Left" style="top: 24rem; left: 53rem;"></div>
+					</div>
+
+
+
+					<input type="checkbox" id="chained-adder-2-a" style="top: 0; left: 52rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 53.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Left" style="top: 5rem; left: 53.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 55.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 11rem; left: 55.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 41rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 7rem; left: 41rem; height: 17rem;"></div>
+					</div>
+
+					<input type="checkbox" id="chained-adder-2-b" style="top: 0; left: 58rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 59.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 57.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 57.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 11rem; left: 57.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 43rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 9rem; left: 43rem; height: 15rem;"></div>
+					</div>
+
+					<div id="chained-adder-2-xor-gate-input" class="Gate XOR" style="left: 54.5rem; top: 11rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 16rem; left: 56.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 18rem; left: 55rem; width: 1.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 18rem; left: 55rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 24rem; left: 55rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 22rem; left: 49rem; width: 6rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 22rem; left: 49rem; height: 2rem;"></div>
+					</div>
+
+					<div id="chained-adder-2-xor-gate-carry" class="Gate XOR" style="left: 52rem; top: 24rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 54rem; height: 10rem;"></div>
+						<div class="Result" style="left: 52.5rem; top: 39rem;"></div>
+					</div>
+
+					<div id="chained-adder-2-and-gate-input" class="Gate AND" style="left: 40rem; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 42rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 31rem; left: 42rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 31rem; left: 44rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 33rem; left: 44rem;"></div>
+					</div>
+
+					<div id="chained-adder-2-and-gate-sum" class="Gate AND" style="left: 46rem; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 48rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 31rem; left: 46rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 31rem; left: 46rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 33rem; left: 46rem;"></div>
+					</div>
+
+					<div id="chained-adder-2-or-gate-carry-out" class="Gate OR" style="left: 43rem; top: 33rem;">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 37rem; left: 45rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Right" style="top: 39rem; left: 38rem; width: 7rem;"></div>
+						<div class="Connector Vertical Corner Right Bottom" style="top: 20rem; left: 38rem; height: 19rem;"></div>
+						<div class="Connector Horizontal Corner Down Right" style="top: 20rem; left: 27rem; width: 11rem; z-index: 2"></div>
+						<div class="Connector Vertical Corner Right" style="top: 20rem; left: 27rem; height: 4rem; z-index: 2"></div>
+
+						<div class="Connector Vertical Junction Top" style="top: 20rem; left: 33rem; height: 4rem; z-index: 2"></div>
+						<div class="Connector Vertical Convex Left" style="top: 24rem; left: 33rem;"></div>
+					</div>
+
+
+					<input type="checkbox" id="chained-adder-3-a" style="top: 0; left: 32rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 33.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Left" style="top: 5rem; left: 33.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 35.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 11rem; left: 35.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 21rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 7rem; left: 21rem; height: 17rem;"></div>
+					</div>
+
+					<input type="checkbox" id="chained-adder-3-b" style="top: 0; left: 38rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 39.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 37.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 37.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 11rem; left: 37.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 23rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 9rem; left: 23rem; height: 15rem;"></div>
+					</div>
+
+					<div id="chained-adder-3-xor-gate-input" class="Gate XOR" style="left: 34.5rem; top: 11rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 16rem; left: 36.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 18rem; left: 35rem; width: 1.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 18rem; left: 35rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 24rem; left: 35rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 22rem; left: 29rem; width: 6rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 22rem; left: 29rem; height: 2rem;"></div>
+					</div>
+
+					<div id="chained-adder-3-xor-gate-carry" class="Gate XOR" style="left: 32rem; top: 24rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 34rem; height: 10rem;"></div>
+						<div class="Result" style="left: 32.5rem; top: 39rem;"></div>
+					</div>
+
+					<div id="chained-adder-3-and-gate-input" class="Gate AND" style="left: 20rem; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 22rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 31rem; left: 22rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 31rem; left: 24rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 33rem; left: 24rem;"></div>
+					</div>
+
+					<div id="chained-adder-3-and-gate-sum" class="Gate AND" style="left: 26rem; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 28rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 31rem; left: 26rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 31rem; left: 26rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 33rem; left: 26rem;"></div>
+					</div>
+
+					<div id="chained-adder-3-or-gate-carry-out" class="Gate OR" style="left: 23rem; top: 33rem;">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 37rem; left: 25rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Right" style="top: 39rem; left: 18rem; width: 7rem;"></div>
+						<div class="Connector Vertical Corner Right Bottom" style="top: 20rem; left: 18rem; height: 19rem;"></div>
+						<div class="Connector Horizontal Corner Down Right" style="top: 20rem; left: 7rem; width: 11rem; z-index: 2"></div>
+						<div class="Connector Vertical Corner Right" style="top: 20rem; left: 7rem; height: 4rem; z-index: 2"></div>
+
+						<div class="Connector Vertical Junction Top" style="top: 20rem; left: 13rem; height: 4rem; z-index: 2"></div>
+						<div class="Connector Vertical Convex Left" style="top: 24rem; left: 13rem;"></div>
+					</div>
+
+
+					<input type="checkbox" id="chained-adder-4-a" style="top: 0; left: 12rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 13.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Up Left" style="top: 5rem; left: 13.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 5rem; left: 15.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 11rem; left: 15.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 7rem; left: 1rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 7rem; left: 1rem; height: 17rem;"></div>
+					</div>
+
+					<input type="checkbox" id="chained-adder-4-b" style="top: 0; left: 18rem;" />
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 3rem; left: 19.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 5rem; left: 17.5rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 5rem; left: 17.5rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 11rem; left: 17.5rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 9rem; left: 3rem; width: 14.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 9rem; left: 3rem; height: 15rem;"></div>
+					</div>
+
+					<div id="chained-adder-4-xor-gate-input" class="Gate XOR" style="left: 14.5rem; top: 11rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 16rem; left: 16.5rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 18rem; left: 15rem; width: 1.5rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 18rem; left: 15rem; height: 6rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 24rem; left: 15rem;"></div>
+
+						<div class="Connector Horizontal Junction Right" style="top: 22rem; left: 9rem; width: 6rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 22rem; left: 9rem; height: 2rem;"></div>
+					</div>
+
+					<div id="chained-adder-4-xor-gate-carry" class="Gate XOR" style="left: 12rem; top: 24rem;">
+						<span></span>
+						<span></span>
+						<div></div>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 14rem; height: 10rem;"></div>
+						<div class="Result" style="left: 12.5rem; top: 39rem;"></div>
+					</div>
+
+					<div id="chained-adder-4-and-gate-input" class="Gate AND" style="left: 0; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 2rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Left Up" style="top: 31rem; left: 2rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Left" style="top: 31rem; left: 4rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Left" style="top: 33rem; left: 4rem;"></div>
+					</div>
+
+					<div id="chained-adder-4-and-gate-sum" class="Gate AND" style="left: 6rem; top: 24rem;"></div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 29rem; left: 8rem; height: 2rem;"></div>
+						<div class="Connector Horizontal Corner Right Up" style="top: 31rem; left: 6rem; width: 2rem;"></div>
+						<div class="Connector Vertical Corner Right" style="top: 31rem; left: 6rem; height: 2rem;"></div>
+						<div class="Connector Vertical Convex Right" style="top: 33rem; left: 6rem;"></div>
+					</div>
+
+					<div id="chained-adder-4-or-gate-carry-out" class="Gate OR" style="left: 3rem; top: 33rem;">
+						<span></span>
+						<span></span>
+					</div>
+					<div class="Group">
+						<div class="Connector Vertical" style="top: 37rem; left: 5rem; height: 2rem;"></div>
+						<div class="Result" style="left: 3.5rem; top: 39rem;"></div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<a href="#decimal-adder" id="decimal-adder">Decimal Adder</a>
 		<section><div>Coming soon...</div></section>
 		<section class="DefaultTab">
