Split chained adder into separate file
In preparation for performance issue with recursion fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<link href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic" rel="stylesheet" type="text/css" />
 	<link href="styles/logic.css" rel="stylesheet" />
+	<link href="styles/chained-adder.css" rel="stylesheet" />
 	<link href="styles/layout.css" rel="stylesheet" />
 </head>
 <body>
