Set theme color for mobile Chrome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link href="styles/logic.css" rel="stylesheet" />
 	<link href="styles/chained-adder.css" rel="stylesheet" />
 	<link href="styles/layout.css" rel="stylesheet" />
+
+	<meta name="theme-color" content="#3F51B5">
 </head>
 <body>
 	<nav>
